--- a/style.css
+++ b/style.css
@@ -1,12 +1,24 @@
 /* navbar styling*/
-a.navbar-brand{
-  margin-left: 10px;
-  padding: 10px;
-  background-color: rgb(81, 175, 160);
+.navbar-brand{
+  margin-left: 11px;
+  padding: 15px;
+  text-align: center;
+  background-color:  rgb(80,170,170);
   font-family: 'Times New Roman', Times, serif;
   font-size: 25px;
 }
 
-/* navbar styling*/
-.navbar{ padding-right:40px;
+.navbar-custom{ background-color: rgb(80, 170, 170);
+}
+
+/* body styling*/
+.container-fluid{
+  background-color: white;
+}
+
+.row {text-align: center;
+  background-color: white;
+  font-style: 'Times New Roman', Times, serif;
+  font-size: 25px;
+  color: rgb(80,170,170)
 }
